# occams-beard

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Open Device Check.cmd  Open Device Check.command  README.md  pyproject.toml
architecture/: decisions.md
docs/: ACCESSIBILITY_NOTES.md  case-studies.md  demo-scenario.md  diagnostic-model.md  finding-rules.md  platform-notes.md  privacy-and-threat-model.md  problem-statement.md  profile-format.md  result-schema.md  roadmap.md  support-workflow.md
endpoint-diagnostics-lab/: .gitignore  README.md  pyproject.toml
endpoint-diagnostics-lab/architecture/: decisions.md
endpoint-diagnostics-lab/docs/: diagnostic-model.md  finding-rules.md  platform-notes.md  problem-statement.md  roadmap.md
endpoint-diagnostics-lab/sample_output/: README.md  dns-failure.json  dns-failure.txt  healthy-endpoint.json  healthy-endpoint.txt  high-resource-pressure.json  high-resource-pressure.txt  no-default-route.json  no-default-route.txt  vpn-private-target-failure.json  vpn-private-target-failure.txt
endpoint-diagnostics-lab/scripts/: demo.sh  open-operator-interface.command
endpoint-diagnostics-lab/src/endpoint_diagnostics_lab/: __init__.py  app.py  cli.py  defaults.py  findings.py  launcher.py  main.py  models.py  report.py  runner.py
endpoint-diagnostics-lab/src/endpoint_diagnostics_lab/collectors/: connectivity.py  network.py  routing.py  storage.py  system.py  vpn.py
endpoint-diagnostics-lab/src/endpoint_diagnostics_lab/platform/: linux.py  macos.py  windows.py
endpoint-diagnostics-lab/src/endpoint_diagnostics_lab/templates/: index.html  layout.html
endpoint-diagnostics-lab/src/endpoint_diagnostics_lab/templates/partials/: facts_summary.html
endpoint-diagnostics-lab/src/endpoint_diagnostics_lab/utils/: __init__.py  parsing.py  time.py  validation.py
endpoint-diagnostics-lab/tests/: support.py  test_app.py  test_cli.py  test_findings.py  test_network_collection.py  test_parsing.py  test_report_output.py  test_serializers.py  test_validation.py
endpoint-diagnostics-lab/tests/fixtures/: linux-ip-route-multiple-defaults.txt
sample_output/: README.md  dns-failure.json  dns-failure.txt  example-targets.json  healthy-endpoint.json  healthy-endpoint.txt  high-resource-pressure.json  high-resource-pressure.txt  no-default-route.json  no-default-route.txt  vpn-private-target-failure.json  vpn-private-target-failure.txt
scripts/: check_docs.py  demo.sh  live_smoke_validate.py  open-operator-interface.command  refresh_sample_output.py
tests/: support.py  test_app.py  test_assistant.py  test_browser_ui.py  test_bundle_validator.py  test_cli.py  test_connectivity_collection.py  test_dns_collection.py  test_domain_registry.py  test_execution_model.py  test_findings.py  test_intake_clarification.py  test_intake_contract.py  (+26 more)
(+148 files in other folders)
