[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "occams-beard"
version = "0.1.0"
description = "Cross-platform host and network diagnostics and lightweight remediation analysis for systems engineering portfolios."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Justin Sadow" }
]
license = { text = "MIT" }
keywords = ["diagnostics", "endpoint", "networking", "systems-engineering", "python"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Operating System :: MacOS",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",
  "Environment :: Console",
]
dependencies = [
  "Flask>=3.1.0,<4.0.0",
]

[project.optional-dependencies]
dev = [
  "black>=24.0.0",
  "ruff>=0.11.0",
  "mypy>=1.10.0",
]

[project.scripts]
occams-beard = "occams_beard.cli:main"
occams-beard-web = "occams_beard.app:main"
occams-beard-operator = "occams_beard.launcher:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
occams_beard = ["templates/*.html", "templates/partials/*.html", "static/*.css"]

[tool.unittest]
test-paths = ["tests"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
mypy_path = "src"
check_untyped_defs = true
no_implicit_optional = true
warn_unused_ignores = true
warn_redundant_casts = true
